(fix): textarea sizing based on small/medium/large css class

--- a/htdocs/wp-content/themes/owc-formulieren/assets/scss/components/_gravityforms-legacy.scss
+++ b/htdocs/wp-content/themes/owc-formulieren/assets/scss/components/_gravityforms-legacy.scss
@@ -54,6 +54,22 @@
 			}
 		}
 
+		.ginput_container_textarea {
+			textarea {
+				&.textarea.small {
+					height: 96px;
+				}
+
+				&.textarea.medium {
+					height: 192px;
+				}
+
+				&.textarea.large {
+					height: 288px;
+				}
+			}
+		}
+
 		&_visibility_ {
 			display: none;
 		}
